Bug 246698 - REGRESSION?(255635@main): [ iOS ] media/video-object-fit.html is a constant failure
Summary: REGRESSION?(255635@main): [ iOS ] media/video-object-fit.html is a constant f...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-18 10:39 PDT by Hercules Hjalmarsson
Modified: 2022-11-04 08:44 PDT (History)
3 users (show)

See Also:


Attachments
Diff images (97.92 KB, application/zip)
2022-10-18 10:44 PDT, Hercules Hjalmarsson
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hercules Hjalmarsson 2022-10-18 10:39:32 PDT
media/video-object-fit.html

Is a constant image failure on iOS ToT and since 255635@main. The image diff suggests an image tolerance issue. This could be a possible progression also if looking at 255635@main.

HISTORY:
https://results.webkit.org/?suite=layout-tests&test=media/video-object-fit.html

DIFF:
0.21% image difference.

*Diff images attached*
Comment 1 Radar WebKit Bug Importer 2022-10-18 10:40:00 PDT
<rdar://problem/101298592>
Comment 2 Hercules Hjalmarsson 2022-10-18 10:44:10 PDT
Created attachment 463061 [details]
Diff images
Comment 3 Hercules Hjalmarsson 2022-10-18 10:46:31 PDT
This issue can be bisected to 255635@main using command:

run-webkit-tests --iterations=2  --ios-simulator  media/video-object-fit.html
Comment 4 EWS 2022-10-18 10:55:54 PDT
Test gardening commit 255684@main (16142a75bab4): <https://commits.webkit.org/255684@main>

Reviewed commits have been landed. Closing PR #5502 and removing active labels.
Comment 5 Jer Noble 2022-10-18 10:58:49 PDT
This went from failing in one way to failing another.
Comment 6 Jer Noble 2022-10-27 10:01:54 PDT
This may get better via https://commits.webkit.org/256069@main.
Comment 7 Jer Noble 2022-10-27 13:06:21 PDT
(In reply to Jer Noble from comment #6)
> This may get better via https://commits.webkit.org/256069@main.

And it does appear that this test is passing now:

Test run @ 10/27/2022, 10:49:30 AM
Commits: 256071@main 
iOS 16 Simulator wk2 Release on iPad (5th generation) with x86_64 (20A360) 
Expected: IMAGE
Actual: PASS
Comment 8 Jer Noble 2022-10-27 15:18:57 PDT
I spoke too soon; looks like it was a flaky pass.
Comment 9 Jer Noble 2022-10-27 15:23:49 PDT
(In reply to Jer Noble from comment #8)
> I spoke too soon; looks like it was a flaky pass.

Aaaand, it looks like a spoke too soon about speaking too soon. The new failure mode is that all the images match (and correctly implement `object-fit:` values). But the test now generates a `FAIL` string at the end, which is surprising, since there are no failure modes in the test itself.
Comment 10 Jer Noble 2022-10-31 15:27:56 PDT
Pull request: https://github.com/WebKit/WebKit/pull/5982
Comment 11 EWS 2022-11-04 08:44:32 PDT
Committed 256320@main (5c28999a8939): <https://commits.webkit.org/256320@main>

Reviewed commits have been landed. Closing PR #5982 and removing active labels.